<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bad_script"
        android:gravity="center_horizontal"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems" />

    <EditText
        android:id="@+id/addDelTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/input" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBtnTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btnAdd"
            android:textColor="#000000"
            app:backgroundTint="#EE82EE" />

        <Button
            android:id="@+id/delBtnTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btnDel"
            android:textColor="#000000"
            app:backgroundTint="#1E90FF" /> <!-- Enhancement 1 Part 2 -->

        <Button
            android:id="@+id/clearBtnTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btnClear"
            android:textColor="#000000"
            app:backgroundTint="#F5FFFA" />
    </LinearLayout>

    <ListView
        android:id="@+id/todoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>